tests/NormalTests/paczka2/big_fuzzy/56972143.err
Error in line 5: S6 A492 22,2
Error in line 4: fLLGYml9dW S774 15,2
Error in line 10: S6 A492 79,6
Error in line 18: S6 A492 383,7
Error in line 19: S6 S774 23,4
Error in line 16: fLLGYml9dW S975 94,1
Error in line 24: S6 S975 946,2
Error in line 27: S6 S975 347,6
Error in line 29: S6 S6 29,1
Error in line 37: S6 S6 108,3
Error in line 26: Qwg9 S6 35,6
Error in line 32: fLLGYml9dW S975 48,0
Error in line 44: fLLGYml9dW A492 96,12
Error in line 39: LltL S975 45,8
Error in line 49: GR1NGExEBR S975 14,0
Error in line 63: S6 S6 63,1
Error in line 71: S6 S6 183,0
Error in line 68: GR1NGExEBR S6 7,5
Error in line 75: e7mg3 S975 44,1
Error in line 85: S6 S975 81,3
Error in line 83: e7mg3 A492 62,6
Error in line 91: S6 S975 376,4
Error in line 94: S6 A492 64,1
Error in line 95: fLLGYml9dW S975 -6,2
Error in line 96: S6 S975 71,1
Error in line 93: h6f S774 78,7
Error in line 99: S6 S975 196,2
Error in line 90: fLLGYml9dW S975 97,0
Error in line 102: S6 S6 14,5
Error in line 88: e7mg3 S774 16,7
Error in line 110: h6f S774 39,8
Error in line 111: LltL A492 23,6
Error in line 116: S6 A492 12,5
Error in line 118: S6 A492 26,1
Error in line 119: S6 S774 45,6
Error in line 117: GR1NGExEBR S774 67,6
Error in line 123: S6 S774 124,9
Error in line 125: S6 S975 64,9
Error in line 127: S6 S6 90,8
Error in line 129: S6 S6 84,6
Error in line 136: S6 S975 35,9
Error in line 141: S6 S975 141,4
Error in line 143: e7mg3 S774 169,5
Error in line 146: GR1NGExEBR S774 34,4
Error in line 155: S6 S975 87,6
Error in line 160: Qwg9 S975 68,2
Error in line 154: e7mg3 S774 5,4
Error in line 168: S6 A492 17,3
Error in line 169: S6 A492 6,4
Error in line 173: S6 S6 88,4
Error in line 167: e7mg3 S975 82,3
Error in line 180: S6 S6 11,5
Error in line 182: S6 S6 28,8
Error in line 183: S6 S6 16,1
Error in line 148: LltL A492 0,0
Error in line 181: Qwg9 S975 38,1
Error in line 193: LltL S6 95,56
Error in line 197: LltL S774 20,7
Error in line 196: GR1NGExEBR S975 18,5
Error in line 194: h6f S774 58,2
Error in line 204: e7mg3 S6 450
Error in line 206: h6f A492 55,59
Error in line 208: S6 S975 9,4
Error in line 202: h6f A492 78,8
Error in line 207: e7mg3 S6 188,1
Error in line 209: h6f S975 7,6
Error in line 225: S6 S774 81,2
Error in line 229: S6 S6 28,4
Error in line 231: S6 S6 57,4
Error in line 244: GR1NGExEBR S975 83,2
